[package]
name = "conv-trackuint-log"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
env_logger = "0.11.5"
log = "0.4.22"
